# StarLink

./: .gitignore  LICENSE  README.md  pyproject.toml
star_vault/: __init__.py  __main__.py
star_vault/ai/: __init__.py  cache.py  client.py
star_vault/ai/prompts/: repo_analysis_v1.txt
star_vault/core/: __init__.py  cli.py  config.py  index_generator.py  state.py  syncer.py  template.py  vault.py
star_vault/models/: __init__.py  note.py  relation.py  repo.py
star_vault/relations/: __init__.py  base.py  engine_builtin.py
star_vault/templates/: repo.md.j2
