[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "star-vault"
version = "0.1.0"
description = "GitHub Stars → structured Markdown knowledge vault with AI summaries and relation graphs"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "w0odst0ck" },
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "openai>=1.0",
]

[project.scripts]
star-vault = "star_vault.core.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["star_vault*"]

[tool.setuptools.package-data]
"star_vault" = ["**/*.j2", "**/*.txt", "**/*.yaml"]
